# gardening-app

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
puutarhasovellus/: .coveragerc  pyproject.toml  tasks.py
puutarhasovellus/dokumentaatio/: architecture.md  testaus.md  tyoaikakirjanpito.md  userinstructions.md  vaatimusmaarittely.md
puutarhasovellus/src/: db_connection.py  db_init.py  index.py
puutarhasovellus/src/entities/: plantation.py  user.py
puutarhasovellus/src/functions/: functions.py
puutarhasovellus/src/repositories/: plantation_repo.py  user_repo.py
puutarhasovellus/src/services/: gardening_service.py
puutarhasovellus/src/tests/: functions_test.py  gardening_service_test.py  plantation_repo_test.py  user_repo_test.py
puutarhasovellus/src/ui/: add_plantation_view.py  add_plantation_view2.py  choose_year_view.py  edit_date_view.py  edit_date_view2.py  edit_plantation_view.py  edit_planting_date_view.py  edit_yield_date_view.py  login_view.py  main_view.py  registration_view.py  ui.py
