[tool.poetry]
name = "puutarhasovellus"
version = "0.1.0"
description = "make notes on how your garden is growing"
authors = ["Jan Rundt <jan.rundt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
tkcalendar = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
